--- a/Views/Dashboard/Index.cshtml
+++ b/Views/Dashboard/Index.cshtml
@@ -10,4 +10,28 @@
 
     <p class="mb-3">If you are not interested, please proceed to the page rendering the required task data</p>
     <a href=@ViewBag.EmployeeInfoUrl class="btn btn-primary btn-lg mb-5">Visit the Employee Information Page</a>
+
+    <p class="mt-4 mb-2"><strong>Greetings!</strong> Thank you for the opportunity to participate in the selection
+        process. Here you can find some information about the things I did and things I did not.</p>
+
+    <p class="font-weight-bold mt-4 mb-2">Employee Data</p>
+    <p class="mb-4">When I started working on the projects, I examined the employee entries data and found out that some
+        of the entries had missing names, and some of the entries had deleted-on property set to a value. My
+        understanding was that entries with no names should belong to a separate category and that entries with the
+        deleted-on property should not be taken into count, since they have been deleted.</p>
+
+    <p class="font-weight-bold mt-4 mb-2">Scalability</p>
+    <p class="mb-4">I tried to make this project as much future friendly as possible, by creating many services and
+        separating some of the controller logic.</p>
+
+    <p class="font-weight-bold mt-4 mb-2">Testing</p>
+    <p class="mb-4">I strive to implement integration and unit tests into every app I make, but in this case I did not
+        have time to do so. Some things were more important (Unfortunate excuse for many apps in the world).</p>
+
+    <p class="font-weight-bold mt-4 mb-2">Chart</p>
+    <p class="mb-0">Chart differs from the one in the Angular app, because the one hosted on CDN had a bug and it
+        rendered some whitespace as a piece of the pie-chart. </p>
+    <p class="mb-0">I tried debugging it in every way I thought of and I could not fix it, hence the diversity.</p>
+    <p class="mb-4">It will be created on visiting the Employee Information page and it will reside inside the
+        <em>wwwroot</em> <em>images</em> folder.</p>
 </div>
